--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.15.2
   cupertino_icons: ^1.0.2
   dropdown_button2: ^2.2.0
   firebase_auth: ^4.17.0
   firebase_core: ^2.25.0
+  firebase_messaging: ^14.7.13
   flutter:
     sdk: flutter
   otp_text_field: ^1.1.3
