--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_dialog: ^3.2.0
   carousel_slider: ^4.2.1
   cloud_firestore: ^4.15.2
   cupertino_icons: ^1.0.2
@@ -38,6 +39,7 @@ dependencies:
   firebase_messaging: ^14.7.13
   flutter:
     sdk: flutter
+  google_sign_in: ^6.2.1
   otp_text_field: ^1.1.3
 
 dev_dependencies:
