--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,16 @@ dependencies:
   firebase_auth: ^4.17.0
   firebase_core: ^2.25.0
   firebase_messaging: ^14.7.13
+  firebase_storage: ^11.6.5
   flutter:
     sdk: flutter
+  get: ^4.6.6
   google_sign_in: ^6.2.1
+  http: ^1.2.0
+  image_picker: ^1.0.7
+  intl: ^0.19.0
   otp_text_field: ^1.1.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
